syntax = "proto3";

package greeting;

option java_package = "org.example.greeting";
option java_multiple_files = true;

message GreetingRequest {
  string firstName = 1;
  string lastName = 2;
  optional int32 limit = 3;
}


message GreetingResponse {
  string greeting = 1;
}

message GreetingResponses {
  repeated string greeting = 1;
}

service GreetingService {
  rpc greet(GreetingRequest) returns (GreetingResponse);
  rpc greetMany(GreetingRequest) returns (stream GreetingResponse);
  rpc greetDifferent(stream GreetingRequest) returns (GreetingResponses);
  rpc greetOneByOne(stream GreetingRequest) returns (stream GreetingResponse);
}
