syntax = "proto3";

package greeting;

option java_package = "org.example.greeting";
option java_multiple_files = true;

import "greeting/models.proto";

service GreetingService {
  rpc greet(GreetingRequest) returns (GreetingResponse);
  rpc greetMany(GreetingRequest) returns (stream GreetingResponse);
  rpc greetDifferent(stream GreetingRequest) returns (GreetingResponses);
  rpc greetOneByOne(stream GreetingRequest) returns (stream GreetingResponse);
  rpc greetWithDeadlineAndRetry(GreetingRequest) returns (GreetingResponse);
}
